--- a/SASS/modules/_carousels.sass
+++ b/SASS/modules/_carousels.sass
@@ -18,7 +18,9 @@
 .carousel-control-next
     left: 110px
 
+    
 #HomeCarousel
+    grid-area: carousel
     .carousel-item
         background-color: $primary
         .slide-one-text
