--- a/SASS/base/_base.sass
+++ b/SASS/base/_base.sass
@@ -4,10 +4,20 @@ h1
 
 h2, h3, h4
     color: $accent
-    font-weight: bold
-a
-    &:hover
-        text-decoration: none
+    font-weight: 549
+a, button
+    cursor: grab
+    &:focus
+        outline: none
+
+article
+    -webkit-column-count: 2
+    -moz-column-count: 2
+    column-count: 2
+    +breakpoint-mobile()
+        -webkit-column-count: 1
+        -moz-column-count: 1
+        column-count: 1
         
         
 #home-container
