--- a/SASS/modules/_boxes.sass
+++ b/SASS/modules/_boxes.sass
@@ -11,8 +11,9 @@
 
     h2
         padding-top: 2rem
+        font-weight: 600
         text-align: center
-        color: $accent
+        color: $secondary
     .media
         width: 90%
         display: block
