--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,10 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Muli:wght@400;600;900&display=swap");
+body {
+  font-family: "Muli", Verdana, Geneva, sans-serif; }
+
 h1 {
   color: #8db5a3;
   font-weight: bold; }
 
 h2, h3, h4 {
   color: #b48f30da;
-  font-weight: 549; }
+  font-weight: 900; }
 
 a, button {
   cursor: grab; }
@@ -28,7 +32,7 @@ article {
   grid-template-columns: 1fr;
   grid-template-areas: "header" "carousel" "intro" "clients" "description" "footer";
   background-color: white;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: "Muli", Verdana, Geneva, sans-serif;
   color: black; }
 
 .navbar-block {
@@ -125,7 +129,12 @@ header {
       text-align: center;
       position: relative;
       top: 50%;
-      transform: translateY(-50%); }
+      transform: translateY(-50%);
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%); }
+      #client-list .companies-wrapper .client:hover {
+        -webkit-filter: grayscale(0%);
+        filter: grayscale(0%); }
 
 #home-description {
   grid-area: description;
@@ -177,7 +186,7 @@ header {
       margin-top: 30px;
       color: black;
       font-size: 1.5rem;
-      font-weight: 549; }
+      font-weight: 600; }
     @media only screen and (max-width: 768px) {
       #about-content .mission-wrapper {
         padding-left: 0;
@@ -217,7 +226,8 @@ header {
         border: 6px solid #8db5a3; }
       #about-content .focus-icons .icon h3 {
         padding-top: 5px;
-        font-size: 1.3rem; }
+        font-size: 1.4rem;
+        font-weight: 600; }
       #about-content .focus-icons .icon h6 {
         color: black;
         font-size: 0.9rem;
@@ -339,6 +349,8 @@ header {
     @media only screen and (max-width: 768px) {
       #contact-content .contact-info {
         display: block; } }
+    #contact-content .contact-info h3 {
+      font-weight: 600; }
 
 footer {
   grid-area: footer;
@@ -416,6 +428,7 @@ footer {
       width: 94%; } }
   .media-box h2, .contact-card h2 {
     padding-top: 2rem;
+    font-weight: 600;
     text-align: center;
     color: #b48f30da; }
   .media-box .media, .contact-card .media {
@@ -507,9 +520,8 @@ footer {
         display: inline-block;
         margin-left: 8px;
         font-size: 1.3rem;
-        color: #324e41;
-        transition: all 0.3s ease-in-out;
-        text-shadow: 1px 1px 2px #818181; }
+        color: #cd4441;
+        transition: all 0.3s ease-in-out; }
         #HomeCarousel .carousel-item .slide-two-text h5:hover + i, #HomeCarousel .carousel-item .slide-two-text i:hover + i {
           position: relative;
           -webkit-transform: translate(15px, 0);
