--- a/SASS/_variables.sass
+++ b/SASS/_variables.sass
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;600;900&display=swap')  
+  
 //COLORSs
 $primary: #8db5a3
 $dark-primary: #324e41
-$accent: #b48f30da
+$secondary: #b48f30da
+$accent: #cd4441
 $dgrey: #4a4a48
 $lgrey: #f3f7fc
 
 //FONTS
-$default-font: Verdana, Geneva, sans-serif
+$default-font: 'Muli', Verdana, Geneva, sans-serif
 $bold-font: "Arial Black", Gadget, sans-serif
 
 //Screen Sizes
