--- a/SASS/layouts/_sections.sass
+++ b/SASS/layouts/_sections.sass
@@ -55,6 +55,11 @@
         .client
             text-align: center
             +center-vertically()
+            -webkit-filter: grayscale(100%) //* Safari 6.0 - 9.0 */
+            filter: grayscale(100%)
+            &:hover
+                -webkit-filter: grayscale(0%) //* Safari 6.0 - 9.0 */
+                filter: grayscale(0%)
 
 
 #home-description
@@ -111,7 +116,7 @@
             margin-top: 30px
             color: black
             font-size: 1.5rem
-            font-weight: 549
+            font-weight: 600
         +breakpoint-mobile()
             padding-left: 0
             paddding-right: 0
@@ -140,7 +145,8 @@
             text-align: center
             h3  
                 padding-top: 5px
-                font-size: 1.3rem
+                font-size: 1.4rem
+                font-weight: 600
             h6
                 color: black
                 font-size: 0.9rem
@@ -254,6 +260,8 @@
         margin-bottom: 80px
         +breakpoint-mobile()
             display: block
+        h3 
+            font-weight: 600
 
             
 
