--- a/SASS/modules/_carousels.sass
+++ b/SASS/modules/_carousels.sass
@@ -33,7 +33,7 @@
                 h1
                     font-size: 3.8rem
             .punchline
-                color: $accent
+                color: $secondary
         .slide-two-text
             +carousel-text(50%, 52%, 30%)
             h4
@@ -46,9 +46,8 @@
                 display: inline-block
                 margin-left: 8px
                 font-size: 1.3rem
-                color: $dark-primary
+                color: $accent
                 transition: all .3s ease-in-out
-                text-shadow: 1px 1px 2px #818181
                 &:hover + i 
                     position: relative
                     +translate(15px, 0)
