--- a/SASS/base/_base.sass
+++ b/SASS/base/_base.sass
@@ -16,6 +16,7 @@ article
     -webkit-column-count: 2
     -moz-column-count: 2
     column-count: 2
+    column-gap: 28px
     +breakpoint-mobile()
         -webkit-column-count: 1
         -moz-column-count: 1
